more content. major changes

--- a/p-enrollment/content.html
+++ b/p-enrollment/content.html
@@ -1,18 +1,20 @@
 <!--Heading Section-->
 <h4 id="head-1">Get Enrollment Form</h4>
 <h4 id="head-2">Fill Out Enrollment Form</h4>
-<h4 id="head-3">Proceed to HAC's Office</h4>
-<h4 id="head-4">Get an Assessment</h4>
-<h4 id="head-5">Pay At The Treasurer's Office</h4>
-<h4 id="head-6">Go To The Guidance Office</h4>
-<h4 id="head-7">Go To The Library</h4>
-<h4 id="head-8">Proceed To The EVP Office</h4>
-<h4 id="head-9">Return To The Registrar's Office</h4>
-<h4 id="head-10">For Freshmen and Transferees</h4>
+<h4 id="head-3">Registrar's Office</h4>
+<h4 id="head-4">HAC's Office</h4>
+<h4 id="head-5">Assessor's Office</h4>
+<h4 id="head-6">Treasurer's Office</h4>
+<h4 id="head-7">Guidance Office</h4>
+<h4 id="head-8">Library</h4>
+<h4 id="head-9">EVP (Executive Vice President) Office</h4>
+<h4 id="head-10">Registrar's Office</h4>
+<h4 id="head-11">For Freshmen and Transferees</h4>
+
 <!--Content Section-->
 <div id="content-1" class="content">
   <h5>What To Do:</h5>
-  <p>Get enrolment form from the Student Assistant in-charge
+  <p>Get enrollment form from the Student Assistant in-charge
     at the given designated area of the school.</p>
   <h5>What You'll Need:</h5>
   <ul class="sublist-content">
@@ -35,7 +37,7 @@
         <h5 class="collapsible-header">Transferees</h5>
         <ul class="collapsible-panel">
           <li>Honorable Dismissal from last school attended</li>
-          <li>Certificate of Good Moral Character from the last school attended</li>
+          <li>Certificate of Good Moral Character from last school attended</li>
           <li>One (1) copy of 1x1 ID picture</li>
           <li>Photocopy of Birth Certificate from P.S.A.</li>
         </ul>
@@ -44,22 +46,30 @@
 </div>
 <div id="content-2" class="content">
   <h5>What To Do:</h5>
-  <p>Fill out necessary information in the Enrolment Form and seek advice from the Registrar for the subject loading. <br> Look for:</p>
-  <ul class="sublist-content">
-    <li>
-      <strong>Engr. Arnulfo M. Distor Sr.</strong> for Engineering, Accountancy, Computer Science & Hospitality Management
-    </li>
-    <li>
-      <strong>Mrs. Nelia S. De Manuel</strong> for Information Technology, Business Administration & Office Administration
-    </li>
-    <li>
-      <strong>Mrs. Nelia S. De Manuel</strong>, NSTP Coordinator for Freshmen enrollees
-    </li>
-  </ul>
-  <h5>Where To Go:</h5>
-  <p>1st Floor, Building D</p>
+  <p>Fill out necessary information in the Enrollment Form.</p>
 </div>
 <div id="content-3" class="content">
+  <h5>What To Do:</h5>
+  <p>Get your Blue Form signed by the Registrar. For irregular students, seek advice from the Registrar for the subject loading.</p>
+  <h5>Where To Go:</h5>
+  <p>1st Floor, Building D</p>
+  <ul class="sublist-content">
+    <li>Look For:
+      <ul>
+        <li>
+          <strong>Engr. Arnulfo M. Distor Sr.</strong> for Engineering, Accountancy, Computer Science & Hospitality Management
+        </li>
+        <li>
+          <strong>Mrs. Nelia S. De Manuel</strong> for Information Technology, Business Administration & Office Administration
+        </li>
+        <li>
+          <strong>Mrs. Nelia S. De Manuel</strong>, NSTP Coordinator for Freshmen enrollees
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div>
+<div id="content-4" class="content">
   <h5>Where To Go:</h5>
   <p>1st Floor, Building D</p>
   <h5>What You'll Need:</h5>
@@ -71,30 +81,30 @@
     </li>
   </ul>
 </div>
-<div id="content-4" class="content">
+<div id="content-5" class="content">
   <h5>Where To Go:</h5>
   <p>1st Floor, Building B</p>
   <h5>What You'll Need:</h5>
   <ul class="sublist-content">
     <li><h5>Old Students</h5>
       <ul>
-        <li>Final Clearance and Blue Form of previous semester</li>
+        <li>Final Clearance and Student's Copy of Enrollment of previous semester</li>
       </ul>
     </li>
   </ul>
 </div>
-<div id="content-5" class="content">
+<div id="content-6" class="content">
   <h5>Where To Go:</h5>
   <p>1st Floor, Building D</p>
 </div>
-<div id="content-6" class="content">
+<div id="content-7" class="content">
   <h5>Where To Go:</h5>
   <p>2nd Floor, Building A</p>
   <h5>What You'll Need:</h5>
     <ul class="sublist-content">
       <li><h5 class="collapsible-header">Old Students</h5>
         <ul class="collapsible-panel">
-          <li>Blue Form of previous semester</li>
+          <li>Blue Form (Student's Copy of previous semester)</li>
         </ul>
       </li>
       <li><h5 class="collapsible-header">Freshmen and Transferees</h5>
@@ -106,14 +116,14 @@
       </li>
     </ul>
 </div>
-<div id="content-7" class="content">
+<div id="content-8" class="content">
   <h5>Where To Go:</h5>
   <p>4th Floor, Building C</p>
   <h5>What You'll Need:</h5>
   <ul class="sublist-content">
     <li><h5 class="collapsible-header">Old Students</h5>
       <ul class="collapsible-panel">
-        <li>Blue Form of previous semester</li>
+        <li>Blue Form (Student's Copy of previous semester)</li>
       </ul>
     </li>
     <li><h5 class="collapsible-header">Freshmen and Transferees</h5>
@@ -125,28 +135,28 @@
     </li>
   </ul>
 </div>
-<div id="content-8" class="content">
+<div id="content-9" class="content">
   <h5>Where To Go:</h5>
   <p>1st Floor, Building D</p>
   <h5>What You'll Need:</h5>
-  <p>Blue Form</p>
+  <p>Blue Form (Student's Copy of Enrollment)</p>
 </div>
-<div id="content-9" class="content">
+<div id="content-10" class="content">
   <h5>What To Do:</h5>
   <p>Return to the Registrar's Office for you to be recorded as officially enrolled.</p>
   <h5>Where To Go:</h5>
   <p>1st Floor, Building D</p>
   <h5>What You'll Need:</h5>
-  <p>Blue Form</p>
+  <p>Blue Form (Student's Copy of Enrollment)</p>
 </div>
-<div id="content-10" class="content">
+<div id="content-11" class="content">
   <h5>What To Do:</h5>
   <p>For freshmen and transferees, proceed to the Internet Laboratory for your School ID.</p>
   <h5>Where To Go:</h5>
   <p>3rd Floor, Building B</p>
   <h5>What You'll Need:</h5>
   <ul>
-    <li>Blue Form</li>
+    <li>Blue Form (Student's Copy of Enrollment)</li>
     <li>Polo Shirt with collar in any color </li>
   </ul>
 </div>
