fixed directory typo error

--- a/p-exam-permit/page.html
+++ b/p-exam-permit/page.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Enrolment Page: ByStep</title>
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/page.css">
-    <link rel="stylesheet" href="/content.css">
+    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../page.css">
+    <link rel="stylesheet" href="../content.css">
     <script src="load.js"></script>
   </head>
 
   <body>
     <header class="process-header">
-      <a class="back-home" href="/index.html"><img src="/ico/arrow-back.svg" alt="-"> <h3>Examination Permit</h3> </a>
+      <a class="back-home" href="../index.html"><img src="../ico/arrow-back.svg" alt="-"> <h3>Examination Permit</h3> </a>
       <div class="process-title">
         <h1>EXAMINATION PERMIT</h1>
       </div>
@@ -75,6 +75,6 @@
       </div>
     </div>
 
-    <script src="/script.js" defer></script>
-    <script src="/processpage.js" defer></script>
+    <script src="../script.js" defer></script>
+    <script src="../processpage.js" defer></script>
   </body>
