--- a/p-exam-permit/page.html
+++ b/p-exam-permit/page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Enrolment Page: ByStep</title>
+    <title>Exam Permit: ByStep</title>
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="../page.css">
     <link rel="stylesheet" href="../content.css">
