--- a/p-excuse-letter/page.html
+++ b/p-excuse-letter/page.html
@@ -19,7 +19,19 @@
         
     </header>
     <div class="main-page">
-      <div class="procedure"><h3>Procedure</h3></div>
+      <div class="procedure">
+        <h3>Procedure</h3>
+        <ul><h5>Note:</h5>
+          <li><p>
+            The student must secure an excuse slip within one week from the time the student
+               reported to school after the absence(s); otherwise, the student will lose the privilege to be excused.
+          </p></li>
+          <li><p>
+            The student must secure an admission slip within three days from the time the student reported to school after the absence(s);
+              otherwise, the student will not be allowed to join the class at the next meeting.
+          </p></li>
+        </ul>
+      </div>
       <div class="step-container">
 <!----------------------step 1----------------------------------------->
         <div class="container step-one active">    
