--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     <!--sidebar starts here-->
     <div id="sidebar-id" class="mobile-sidebar">
       <h3 class="nav-top"> 
-        <img id="sidebar-close" class="closebtn" src="ico/close.svg" height="30px" alt="X">
+        <img class="closebtn" src="ico/close.svg" height="30px" alt="X">
       </h3>
       <ul class="nav-list">
-        <li class="list-header"><h3 href="#">DOCUMENTS</h3>
+        <li class="list-header"><p>DOCUMENTS</p>
           <ul class="list-name">
             <li><a href="#">Clearance</a></li>
             <li><a href="#">SHS Report Card</a></li>
@@ -85,7 +85,7 @@
             <li><a href="#">Honorable Dismissal</a></li>
           </ul>
         </li>
-        <li class="list-header"><h3 href="#">LOCATION</h3>
+        <li class="list-header"><p>LOCATION</p>
           <ul class="list-name">
             <li><a href="#">Loc1</a></li>
             <li><a href="#">Loc2</a></li>
@@ -100,7 +100,7 @@
       
     <div class="desktop-sidebar">
       <ul class="nav-list">
-        <li class="list-header"><h3 href="#">DOCUMENTS</h3>
+        <li class="list-header"><p>DOCUMENTS<p>
           <ul class="list-name">
             <li><a href="#">Clearance</a></li>
             <li><a href="#">SHS Report Card</a></li>
@@ -109,7 +109,7 @@
             <li><a href="#">Honorable Dismissal</a></li>
           </ul>
         </li>
-        <li class="list-header"><h3 href="#">LOCATION</h3>
+        <li class="list-header"><p>LOCATION</p>
           <ul class="list-name">
             <li><a href="#">Loc1</a></li>
             <li><a href="#">Loc2</a></li>
