--- a/p-exam-permit/page.html
+++ b/p-exam-permit/page.html
@@ -14,7 +14,7 @@
     <header class="process-header">
       <a class="back-home" href="../index.html"><img src="../ico/arrow-back.svg" alt="-"> <h3>Examination Permit</h3> </a>
       <div class="process-title">
-        <h1>EXAMINATION PERMIT</h1>
+        <h1>EXAM PERMIT</h1>
       </div>
         
     </header>
