experimenting sidebar scroll

--- a/index.html
+++ b/index.html
@@ -78,20 +78,40 @@
       <ul class="nav-list">
         <li class="list-header"><p>DOCUMENTS</p>
           <ul class="list-name">
+            <li><a href="#">Admission Slip</a></li>
+            <li><a href="#">Affidavit of Loss</a></li>
+            <li><a href="#">Birth Certificate</a></li>
+            <li><a href="#">Blue Form (Student's Copy)</a></li>
             <li><a href="#">Clearance</a></li>
-            <li><a href="#">SHS Report Card</a></li>
-            <li><a href="#">SHS Good Moral</a></li>
-            <li><a href="#">PSA Birth Certificate</a></li>
+            <li><a href="#">Enrollment Form</a></li>
+            <li><a href="#">Excuse Slip</a></li>
+            <li><a href="#">Examination Permit</a></li>
+            <li><a href="#">Final Grades Form</a></li>
+            <li><a href="#">Good Moral Character</a></li>
             <li><a href="#">Honorable Dismissal</a></li>
+            <li><a href="#">Library Card</a></li>
+            <li><a href="#">School ID</a></li>
+            <li><a href="#">SHS Report Card (Form 138)</a></li>
+            <li><a href="#">Student Information Sheet</a></li>
+            <li><a href="#">Transcript of Records</a></li>
           </ul>
         </li>
         <li class="list-header"><p>LOCATION</p>
           <ul class="list-name">
-            <li><a href="#">Loc1</a></li>
-            <li><a href="#">Loc2</a></li>
-            <li><a href="#">Loc3</a></li>
-            <li><a href="#">Loc4</a></li>
-            <li><a href="#">Loc5</a></li>
+            <li><a href="#">Assessor's Office</a></li>
+            <li><a href="#">Building A</a></li>
+            <li><a href="#">Building B</a></li>
+            <li><a href="#">Building C</a></li>
+            <li><a href="#">Building D</a></li>
+            <li><a href="#">EVP Office</a></li>
+            <li><a href="#">Guidance Office</a></li>
+            <li><a href="#">HAC's Office</a></li>
+            <li><a href="#">Internet Laboratory</a></li>
+            <li><a href="#">Library</a></li>
+            <li><a href="#">Registrar's Office</a></li>
+            <li><a href="#">SaaS Office</a></li>
+            <li><a href="#">SSC Office</a></li>
+            <li><a href="#">Treasurer's Office</a></li>
           </ul>
         </li>
       </ul>
@@ -102,20 +122,40 @@
       <ul class="nav-list">
         <li class="list-header"><p>DOCUMENTS<p>
           <ul class="list-name">
+            <li><a href="#">Admission Slip</a></li>
+            <li><a href="#">Affidavit of Loss</a></li>
+            <li><a href="#">Birth Certificate</a></li>
+            <li><a href="#">Blue Form (Student's Copy)</a></li>
             <li><a href="#">Clearance</a></li>
-            <li><a href="#">SHS Report Card</a></li>
-            <li><a href="#">SHS Good Moral</a></li>
-            <li><a href="#">PSA Birth Certificate</a></li>
+            <li><a href="#">Enrollment Form</a></li>
+            <li><a href="#">Excuse Slip</a></li>
+            <li><a href="#">Examination Permit</a></li>
+            <li><a href="#">Final Grades Form</a></li>
+            <li><a href="#">Good Moral Character</a></li>
             <li><a href="#">Honorable Dismissal</a></li>
+            <li><a href="#">Library Card</a></li>
+            <li><a href="#">School ID</a></li>
+            <li><a href="#">SHS Report Card (Form 138)</a></li>
+            <li><a href="#">Student Information Sheet</a></li>
+            <li><a href="#">Transcript of Records</a></li>
           </ul>
         </li>
         <li class="list-header"><p>LOCATION</p>
           <ul class="list-name">
-            <li><a href="#">Loc1</a></li>
-            <li><a href="#">Loc2</a></li>
-            <li><a href="#">Loc3</a></li>
-            <li><a href="#">Loc4</a></li>
-            <li><a href="#">Loc5</a></li>
+            <li><a href="#">Assessor's Office</a></li>
+            <li><a href="#">Building A</a></li>
+            <li><a href="#">Building B</a></li>
+            <li><a href="#">Building C</a></li>
+            <li><a href="#">Building D</a></li>
+            <li><a href="#">EVP Office</a></li>
+            <li><a href="#">Guidance Office</a></li>
+            <li><a href="#">HAC's Office</a></li>
+            <li><a href="#">Internet Laboratory</a></li>
+            <li><a href="#">Library</a></li>
+            <li><a href="#">Registrar's Office</a></li>
+            <li><a href="#">SaaS Office</a></li>
+            <li><a href="#">SSC Office</a></li>
+            <li><a href="#">Treasurer's Office</a></li>
           </ul>
         </li>
       </ul>
