sidebar functionality overhaul

--- a/glossary.html
+++ b/glossary.html
@@ -14,7 +14,7 @@
   </div>
   <div class="main-page">
     <div id="term-1" class="term">
-      <h4 class="term-title">AaaAaa</h4>
+      <h4 class="term-title">Admission Slip</h4>
       <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Aenean rhoncus maximus elit eleifend sollicitudin. 
         Cras eget tempus ligula, in ornare magna. Vivamus ullamcorper tristique tortor. 
@@ -25,7 +25,7 @@
         Etiam congue mauris non condimentum interdum. Ut et orci at orci molestie fringilla.</p>
     </div>
     <div id="term-2" class="term">
-      <h4 class="term-title">Aabaa</h4>
+      <h4 class="term-title">Affidavit of Loss</h4>
       <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Aenean rhoncus maximus elit eleifend sollicitudin. 
         Cras eget tempus ligula, in ornare magna. Vivamus ullamcorper tristique tortor. 
@@ -33,14 +33,14 @@
         Nam dapibus id magna id tempor. Etiam eu tellus ut eros venenatis viverra.</p>
     </div>
     <div id="term-3" class="term">
-      <h4 class="term-title">AbaAaa</h4>
+      <h4 class="term-title">Birth Certificate</h4>
       <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Aenean rhoncus maximus elit eleifend sollicitudin. 
         Cras eget tempus ligula, in ornare magna. Vivamus ullamcorper tristique tortor. 
         Pellentesque sapien velit, pharetra id vulputate ut, ullamcorper eget orci.</p>
     </div>
     <div id="term-4" class="term">
-      <h4 class="term-title">BBaaAaa</h4>
+      <h4 class="term-title">Blue Form (Student's Copy)</h4>
       <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Aenean rhoncus maximus elit eleifend sollicitudin. 
         Cras eget tempus ligula, in ornare magna. Vivamus ullamcorper tristique tortor. 
