--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
 
   <body>
     <header class="header">
-      <img id="sidebar-open" class="sidebar-btn" src="ico/sidebar.svg" width="30px">
+      <img id="sidebr" class="sidebar-btn" width="30px">
       <img class="text-logo" src="ico/logo/logo-name.svg" width="150px">
       <img class="search-btn" src="ico/search.svg" width="30px">
       </div>
     </header>
-
+    <div class="header-placeholder"></div> <!--placeholder space below header to prevent clipping of contents with main page-->
     <div class="main-page">
-      <div class="header-placeholder"></div> <!--placeholder space below header to prevent clipping of contents with main page-->
-      
       <div class="section">
         <a class="viewcard" href="p-enrollment/page.html">
           <img class="card-image" src="gallery/1.png">
@@ -71,10 +69,7 @@
     </div>
     
     <!--sidebar starts here-->
-    <div id="sidebar-id" class="mobile-sidebar">
-      <h3 class="nav-top"> 
-        <img class="closebtn" src="ico/close.svg" height="30px" alt="X">
-      </h3>
+    <div class="mobile-sidebar">
       <ul class="nav-list">
         <li class="list-header"><p>DOCUMENTS</p>
           <ul class="list-name">
