integrated glossary to sidebar

--- a/glossary.html
+++ b/glossary.html
@@ -13,18 +13,9 @@
     <h1>GLOSSARY</h1>
   </div>
   <div class="main-page">
-    <div id="term-1" class="term">
-      <h4 class="term-title">Admission Slip</h4>
-      <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Aenean rhoncus maximus elit eleifend sollicitudin. 
-        Cras eget tempus ligula, in ornare magna. Vivamus ullamcorper tristique tortor. 
-        Pellentesque sapien velit, pharetra id vulputate ut, ullamcorper eget orci. 
-        Nam dapibus id magna id tempor. Etiam eu tellus ut eros venenatis viverra. 
-        Vivamus eleifend consectetur auctor. Ut dictum ex nisi, at placerat arcu aliquet et. 
-        Etiam tempus id elit quis venenatis. Duis vehicula nisl sed urna tempus imperdiet. 
-        Etiam congue mauris non condimentum interdum. Ut et orci at orci molestie fringilla.</p>
-    </div>
-    <div id="term-2" class="term">
+    <!-------------DOCUMENTS SECTION-------------------------->
+    <h3 class="group-section">DOCUMENTS</h3>
+    <div id="doc-1" class="term">
       <h4 class="term-title">Affidavit of Loss</h4>
       <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Aenean rhoncus maximus elit eleifend sollicitudin. 
@@ -32,14 +23,14 @@
         Pellentesque sapien velit, pharetra id vulputate ut, ullamcorper eget orci. 
         Nam dapibus id magna id tempor. Etiam eu tellus ut eros venenatis viverra.</p>
     </div>
-    <div id="term-3" class="term">
+    <div id="doc-2" class="term">
       <h4 class="term-title">Birth Certificate</h4>
       <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Aenean rhoncus maximus elit eleifend sollicitudin. 
         Cras eget tempus ligula, in ornare magna. Vivamus ullamcorper tristique tortor. 
         Pellentesque sapien velit, pharetra id vulputate ut, ullamcorper eget orci.</p>
     </div>
-    <div id="term-4" class="term">
+    <div id="doc-3" class="term">
       <h4 class="term-title">Blue Form (Student's Copy)</h4>
       <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Aenean rhoncus maximus elit eleifend sollicitudin. 
@@ -50,7 +41,132 @@
         Etiam tempus id elit quis venenatis. Duis vehicula nisl sed urna tempus imperdiet. 
         Etiam congue mauris non condimentum interdum. Ut et orci at orci molestie fringilla.</p>
     </div>
-  </div>
+    <div id="doc-4" class="term">
+      <h4 class="term-title">Clearance</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-5" class="term">
+      <h4 class="term-title">Enrollment Form</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-6" class="term">
+      <h4 class="term-title">Examination Permit</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-7" class="term">
+      <h4 class="term-title">Excuse Slip</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-8" class="term">
+      <h4 class="term-title">Final Grades Form</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-9" class="term">
+      <h4 class="term-title">Good Moral Character</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-10" class="term">
+      <h4 class="term-title">Honorable Dismissal</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-11" class="term">
+      <h4 class="term-title">Library Card</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-12" class="term">
+      <h4 class="term-title">School ID</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-13" class="term">
+      <h4 class="term-title">SHS Report Card (Form 138)</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-14" class="term">
+      <h4 class="term-title">Student Information Sheet</h4>
+      <p class="term-desc"></p>
+    </div>
+    <div id="doc-15" class="term">
+      <h4 class="term-title">Transcript of Records</h4>
+      <p class="term-desc"></p>
+    </div>
+    <!-----------LOCATION SECTION------------->
+    <h3 class="group-section">LOCATION</h3>
+    <div id="loc-1" class="term">
+      <h4 class="term-title">Assessor's Office</h4>
+      <p class="term-desc">The Assessor's Office is located at the ground floor of Building B 
+        (Doña Enrica R. Garcia Building). Students can get an assessment of their payment here as well 
+        as obtain a certificate of clearance for their transcript of records.</p>
+    </div>
+    <div id="loc-2" class="term">
+      <h4 class="term-title">Building A</h4>
+      <p class="term-desc">Building A is also known as Don Florencio M. Garcia Building. The Guidance Office is located in this building.</p>
+    </div>
+    <div id="loc-3" class="term">
+      <h4 class="term-title">Building B</h4>
+      <p class="term-desc">Building B is also known as Doña Enrica R. Garcia Building. 
+        This building contains the Internet Laboratory, the SaaS Office, the SSC Office and the Assessor's Office.</p>
+    </div>
+    <div id="loc-4" class="term">
+      <h4 class="term-title">Building C</h4>
+      <p class="term-desc">Building C is also known as the Eric R. Garcia Building. The Library is located in this building.</p>
+    </div>
+    <div id="loc-5" class="term">
+      <h4 class="term-title">Building D</h4>
+      <p class="term-desc">The Administration Building is called Building D. The HAC's Office, 
+        Registrar's Office, Treasurer's Office, and EVP Office are all located here.</p>
+    </div>
+    <div id="loc-6" class="term">
+      <h4 class="term-title">EVP Office</h4>
+      <p class="term-desc">The EVP Office is located at the ground floor of the Administration Building. 
+        Here, the students can get their clearance and enrollment form signed by the Executive Vice President.</p>
+    </div>
+    <div id="loc-7" class="term">
+      <h4 class="term-title">Guidance Office</h4>
+      <p class="term-desc">The Guidance Office is located on the 2nd floor of Building A (Don Florencio M. Garcia Building). 
+        Students can process their excuse letter and can secure their admission slip.</p>
+    </div>
+    <div id="loc-8" class="term">
+      <h4 class="term-title">HAC's Office</h4>
+      <p class="term-desc">The HAC's Office is located at the ground floor of the Administration Building. 
+        Students can get their enrollment form and clearance signed, if needed.</p>
+    </div>
+    <div id="loc-9" class="term">
+      <h4 class="term-title">Internet Laboratory</h4>
+      <p class="term-desc">The Internet Laboratory is located on the 3rd floor of  Building B (Doña Enrica R. Garcia Building). 
+        Freshmen and transferees can obtain their school ID while old students can renew their 
+        School ID (for loss of ID) here.</p>
+    </div>
+    <div id="loc-10" class="term">
+      <h4 class="term-title">Library</h4>
+      <p class="term-desc">The Library is located on the 4th floor of building C (  Eric R. Garcia Building). 
+        Students can get their library cards and process them here. Additionally, 
+        students can turn in their library cards here for clearance signatures.</p>
+    </div>
+    <div id="loc-11" class="term">
+      <h4 class="term-title">Registrar's Office</h4>
+      <p class="term-desc">The Registrar's Office is located at the ground floor of the Administration Building. 
+        The Registrar's Office includes seven windows, each with a specific purpose. Students can seek advice from the Registrar's Office 
+        for the subject loading. Additionally, students can obtain a sign from the college registrar and the NSTP coordinator for clearance. 
+        This is also where you may get your transcript of records.</p>
+    </div>
+    <div id="loc-12" class="term">
+      <h4 class="term-title">SaaS Office</h4>
+      <p class="term-desc">The SaaS Office is located at the ground floor of Building B (Doña Enrica R. Garcia Building) near the exit gate.</p>
+    </div>
+    <div id="loc-13" class="term">
+      <h4 class="term-title">SSC Office</h4>
+      <p class="term-desc">The SSC Office is located on the second floor of Building B (Doña Enrica R. Garcia Building). 
+        Students can settle their penalties here.</p>
+    </div>
+    <div id="loc-14" class="term">
+      <h4 class="term-title">Treasurer's Office</h4>
+      <p class="term-desc">The Treasurer's Office is located at the ground floor of the Administration Building. 
+        Students can settle and pay their tuition fees and any necessary fees that are stated in the assessment here. 
+        Examination permits can be obtained by the students at the Cashier window next to the Treasurer's Office.</p>
+    </div>
   
-</body>
+
+
+    <script src="glossary.js"></script>
+  </body>
 </html>
