--- a/p-enrollment/content.html
+++ b/p-enrollment/content.html
@@ -50,7 +50,7 @@
 </div>
 <div id="content-3" class="content">
   <h5>What To Do:</h5>
-  <p>Get your Blue Form signed by the Registrar. For irregular students, seek advice from the Registrar for the subject loading.</p>
+  <p>Get your Enrollment Form signed by the Registrar. For irregular students, seek advice from the Registrar for the subject loading.</p>
   <h5>Where To Go:</h5>
   <p>1st Floor, Building D</p>
   <ul class="sublist-content">
