--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="header">
-      <img id="sidebr" class="sidebar-btn" width="30px">
+      <img id="sidebr" class="sidebar-open" width="30px">
       <img class="text-logo" src="ico/logo/logo-name.svg" width="150px">
       <img class="search-btn" src="ico/search.svg" width="30px">
       </div>
@@ -73,87 +73,86 @@
       <ul class="nav-list">
         <li class="list-header"><p>DOCUMENTS</p>
           <ul class="list-name">
-            <li><a href="#">Admission Slip</a></li>
-            <li><a href="#">Affidavit of Loss</a></li>
-            <li><a href="#">Birth Certificate</a></li>
-            <li><a href="#">Blue Form (Student's Copy)</a></li>
-            <li><a href="#">Clearance</a></li>
-            <li><a href="#">Enrollment Form</a></li>
-            <li><a href="#">Excuse Slip</a></li>
-            <li><a href="#">Examination Permit</a></li>
-            <li><a href="#">Final Grades Form</a></li>
-            <li><a href="#">Good Moral Character</a></li>
-            <li><a href="#">Honorable Dismissal</a></li>
-            <li><a href="#">Library Card</a></li>
-            <li><a href="#">School ID</a></li>
-            <li><a href="#">SHS Report Card (Form 138)</a></li>
-            <li><a href="#">Student Information Sheet</a></li>
-            <li><a href="#">Transcript of Records</a></li>
+            <li><a href="glossary.html#doc-1">Affidavit of Loss</a></li>
+            <li><a href="glossary.html#doc-2">Birth Certificate</a></li>
+            <li><a href="glossary.html#doc-3">Blue Form (Student's Copy)</a></li>
+            <li><a href="glossary.html#doc-4">Clearance</a></li>
+            <li><a href="glossary.html#doc-5">Enrollment Form</a></li>
+            <li><a href="glossary.html#doc-6">Excuse Slip</a></li>
+            <li><a href="glossary.html#doc-7">Examination Permit</a></li>
+            <li><a href="glossary.html#doc-8">Final Grades Form</a></li>
+            <li><a href="glossary.html#doc-9">Good Moral Character</a></li>
+            <li><a href="glossary.html#doc-10">Honorable Dismissal</a></li>
+            <li><a href="glossary.html#doc-11">Library Card</a></li>
+            <li><a href="glossary.html#doc-12">School ID</a></li>
+            <li><a href="glossary.html#doc-13">SHS Report Card (Form 138)</a></li>
+            <li><a href="glossary.html#doc-14">Student Information Sheet</a></li>
+            <li><a href="glossary.html#doc-15">Transcript of Records</a></li>
           </ul>
         </li>
         <li class="list-header"><p>LOCATION</p>
           <ul class="list-name">
-            <li><a href="#">Assessor's Office</a></li>
-            <li><a href="#">Building A</a></li>
-            <li><a href="#">Building B</a></li>
-            <li><a href="#">Building C</a></li>
-            <li><a href="#">Building D</a></li>
-            <li><a href="#">EVP Office</a></li>
-            <li><a href="#">Guidance Office</a></li>
-            <li><a href="#">HAC's Office</a></li>
-            <li><a href="#">Internet Laboratory</a></li>
-            <li><a href="#">Library</a></li>
-            <li><a href="#">Registrar's Office</a></li>
-            <li><a href="#">SaaS Office</a></li>
-            <li><a href="#">SSC Office</a></li>
-            <li><a href="#">Treasurer's Office</a></li>
+            <li><a href="glossary.html#loc-1">Assessor's Office</a></li>
+            <li><a href="glossary.html#loc-2">Building A</a></li>
+            <li><a href="glossary.html#loc-3">Building B</a></li>
+            <li><a href="glossary.html#loc-4">Building C</a></li>
+            <li><a href="glossary.html#loc-5">Building D</a></li>
+            <li><a href="glossary.html#loc-6">EVP Office</a></li>
+            <li><a href="glossary.html#loc-7">Guidance Office</a></li>
+            <li><a href="glossary.html#loc-8">HAC's Office</a></li>
+            <li><a href="glossary.html#loc-9">Internet Laboratory</a></li>
+            <li><a href="glossary.html#loc-10">Library</a></li>
+            <li><a href="glossary.html#loc-11">Registrar's Office</a></li>
+            <li><a href="glossary.html#loc-12">SaaS Office</a></li>
+            <li><a href="glossary.html#loc-13">SSC Office</a></li>
+            <li><a href="glossary.html#loc-14">Treasurer's Office</a></li>
           </ul>
         </li>
       </ul>
-
+      <div class="sidebar-footer"></div>
     </div>
       
     <div class="desktop-sidebar">
       <ul class="nav-list">
         <li class="list-header"><p>DOCUMENTS<p>
           <ul class="list-name">
-            <li><a href="#">Admission Slip</a></li>
-            <li><a href="#">Affidavit of Loss</a></li>
-            <li><a href="#">Birth Certificate</a></li>
-            <li><a href="#">Blue Form (Student's Copy)</a></li>
-            <li><a href="#">Clearance</a></li>
-            <li><a href="#">Enrollment Form</a></li>
-            <li><a href="#">Excuse Slip</a></li>
-            <li><a href="#">Examination Permit</a></li>
-            <li><a href="#">Final Grades Form</a></li>
-            <li><a href="#">Good Moral Character</a></li>
-            <li><a href="#">Honorable Dismissal</a></li>
-            <li><a href="#">Library Card</a></li>
-            <li><a href="#">School ID</a></li>
-            <li><a href="#">SHS Report Card (Form 138)</a></li>
-            <li><a href="#">Student Information Sheet</a></li>
-            <li><a href="#">Transcript of Records</a></li>
+            <li><a href="glossary.html#doc-1">Affidavit of Loss</a></li>
+            <li><a href="glossary.html#doc-2">Birth Certificate</a></li>
+            <li><a href="glossary.html#doc-3">Blue Form (Student's Copy)</a></li>
+            <li><a href="glossary.html#doc-4">Clearance</a></li>
+            <li><a href="glossary.html#doc-5">Enrollment Form</a></li>
+            <li><a href="glossary.html#doc-6">Excuse Slip</a></li>  
+            <li><a href="glossary.html#doc-7">Examination Permit</a></li>
+            <li><a href="glossary.html#doc-8">Final Grades Form</a></li>
+            <li><a href="glossary.html#doc-9">Good Moral Character</a></li>
+            <li><a href="glossary.html#doc-10">Honorable Dismissal</a></li>
+            <li><a href="glossary.html#doc-11">Library Card</a></li>
+            <li><a href="glossary.html#doc-12">School ID</a></li>
+            <li><a href="glossary.html#doc-13">SHS Report Card (Form 138)</a></li>
+            <li><a href="glossary.html#doc-14">Student Information Sheet</a></li>
+            <li><a href="glossary.html#doc-15">Transcript of Records</a></li>
           </ul>
         </li>
         <li class="list-header"><p>LOCATION</p>
           <ul class="list-name">
-            <li><a href="#">Assessor's Office</a></li>
-            <li><a href="#">Building A</a></li>
-            <li><a href="#">Building B</a></li>
-            <li><a href="#">Building C</a></li>
-            <li><a href="#">Building D</a></li>
-            <li><a href="#">EVP Office</a></li>
-            <li><a href="#">Guidance Office</a></li>
-            <li><a href="#">HAC's Office</a></li>
-            <li><a href="#">Internet Laboratory</a></li>
-            <li><a href="#">Library</a></li>
-            <li><a href="#">Registrar's Office</a></li>
-            <li><a href="#">SaaS Office</a></li>
-            <li><a href="#">SSC Office</a></li>
-            <li><a href="#">Treasurer's Office</a></li>
+            <li><a href="glossary.html#loc-1">Assessor's Office</a></li>
+            <li><a href="glossary.html#loc-2">Building A</a></li>
+            <li><a href="glossary.html#loc-3">Building B</a></li>
+            <li><a href="glossary.html#loc-4">Building C</a></li>
+            <li><a href="glossary.html#loc-5">Building D</a></li>
+            <li><a href="glossary.html#loc-6">EVP Office</a></li>
+            <li><a href="glossary.html#loc-7">Guidance Office</a></li>
+            <li><a href="glossary.html#loc-8">HAC's Office</a></li>
+            <li><a href="glossary.html#loc-9">Internet Laboratory</a></li>
+            <li><a href="glossary.html#loc-10">Library</a></li>
+            <li><a href="glossary.html#loc-11">Registrar's Office</a></li>
+            <li><a href="glossary.html#loc-12">SaaS Office</a></li>
+            <li><a href="glossary.html#loc-13">SSC Office</a></li>
+            <li><a href="glossary.html#loc-14">Treasurer's Office</a></li>
           </ul>
         </li>
       </ul>
+      <div class="sidebar-footer"></div>
     </div>
 
   </body>
