added header + viewcard images

--- a/glossary.html
+++ b/glossary.html
@@ -17,77 +17,80 @@
     <h3 class="group-section">DOCUMENTS</h3>
     <div id="doc-1" class="term">
       <h4 class="term-title">Affidavit of Loss</h4>
-      <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Aenean rhoncus maximus elit eleifend sollicitudin. 
-        Cras eget tempus ligula, in ornare magna. Vivamus ullamcorper tristique tortor. 
-        Pellentesque sapien velit, pharetra id vulputate ut, ullamcorper eget orci. 
-        Nam dapibus id magna id tempor. Etiam eu tellus ut eros venenatis viverra.</p>
+      <p class="term-desc"> A sworn statement confirming the physical loss of a property. 
+        Contains all the details regarding the loss.</p>
     </div>
     <div id="doc-2" class="term">
       <h4 class="term-title">Birth Certificate</h4>
-      <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Aenean rhoncus maximus elit eleifend sollicitudin. 
-        Cras eget tempus ligula, in ornare magna. Vivamus ullamcorper tristique tortor. 
-        Pellentesque sapien velit, pharetra id vulputate ut, ullamcorper eget orci.</p>
+      <p class="term-desc">A document that records all the vital information regarding a person's birth including the name, 
+        time, place, parents, etc.</p>
     </div>
     <div id="doc-3" class="term">
       <h4 class="term-title">Blue Form (Student's Copy)</h4>
-      <p class="term-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Aenean rhoncus maximus elit eleifend sollicitudin. 
-        Cras eget tempus ligula, in ornare magna. Vivamus ullamcorper tristique tortor. 
-        Pellentesque sapien velit, pharetra id vulputate ut, ullamcorper eget orci. 
-        Nam dapibus id magna id tempor. Etiam eu tellus ut eros venenatis viverra. 
-        Vivamus eleifend consectetur auctor. Ut dictum ex nisi, at placerat arcu aliquet et. 
-        Etiam tempus id elit quis venenatis. Duis vehicula nisl sed urna tempus imperdiet. 
-        Etiam congue mauris non condimentum interdum. Ut et orci at orci molestie fringilla.</p>
+      <p class="term-desc">Similar to the enrollment form, a blue form is the student's copy of enrollment. 
+        Contains information about the student, assessment, and details about the course taken by the student 
+        (i.e., subjects, instructors, schedule, room assignment, etc.).</p>
     </div>
     <div id="doc-4" class="term">
       <h4 class="term-title">Clearance</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc">One of the requirements for students to be able to take the final examination. A ½ sized special paper that contains student's 
+        information and requires signatures of various/involved persons and Offices.</p>
     </div>
     <div id="doc-5" class="term">
       <h4 class="term-title">Enrollment Form</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc">Blue-colored document which the student is required to complete to be able to enroll in the College. 
+        Requires student's information and signatures of various/involved Offices; and contains details about 
+        the course taken by the student (i.e., subjects, instructors, schedule, room assignment, etc.).</p>
     </div>
     <div id="doc-6" class="term">
       <h4 class="term-title">Examination Permit</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc">A ¼ sized colored paper that contains the student's name, course & year, permit number, 
+        and signature of the person who issued the permit. The student is required to fill out the enrolled subjects 
+        so that he/she can take the examination and the proctor can sign on the said examination permit.</p>
     </div>
     <div id="doc-7" class="term">
       <h4 class="term-title">Excuse Slip</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc">A document that needs to be secured if the student wishes to be excused from the class. 
+        Requires the name of the student, course & year, date/s of absences, subject/s where the student was absent, and the student's signature. 
+        It also requires the signature of the Guidance Counselor.</p>
     </div>
     <div id="doc-8" class="term">
       <h4 class="term-title">Final Grades Form</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc"> A ½ sized special paper that will be containing the grades of the student in corresponding to all the subjects the student enrolled. 
+        It requires the student's name, course & year, subjects, and instructors' names.</p>
     </div>
     <div id="doc-9" class="term">
       <h4 class="term-title">Good Moral Character</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc">A certificate issued by any Guidance Office to confirm that a former student of an 
+        institution has shown model behavior during the time of his/her enrollment.</p>
     </div>
     <div id="doc-10" class="term">
       <h4 class="term-title">Honorable Dismissal</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc">A document that certifies the student has no pending liabilities with the school and 
+        is qualified for transfer to another educational institution. </p>
     </div>
     <div id="doc-11" class="term">
       <h4 class="term-title">Library Card</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc">An identification card similar to school ID, a library card is made exclusively at the GCT Library which contains the student's photo, 
+        name, course & year, ID number, library card number, and the student's signature.</p>
     </div>
     <div id="doc-12" class="term">
       <h4 class="term-title">School ID</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc">Made exclusively at the GCT Internet Laboratory which contains the student's photo, name, course & year, 
+        ID number, signature, and the person to contact in case of emergency.</p>
     </div>
     <div id="doc-13" class="term">
       <h4 class="term-title">SHS Report Card (Form 138)</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc">An official document that records the student's academic performance in Senior High School. </p>
     </div>
     <div id="doc-14" class="term">
       <h4 class="term-title">Student Information Sheet</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc">Included in the enrollment form. Requires details about the student and his/her parent/guardian as well as the signature of the student.</p>
     </div>
     <div id="doc-15" class="term">
       <h4 class="term-title">Transcript of Records</h4>
-      <p class="term-desc"></p>
+      <p class="term-desc"> An official document that serves as a complete record of a student's academic achievements during their 
+        studies which includes records of courses taken, grades received, number of credits earned, etc.</p>
     </div>
     <!-----------LOCATION SECTION------------->
     <h3 class="group-section">LOCATION</h3>
