--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="main-page">
       <div class="section">
         <a class="viewcard" href="p-enrollment/page.html">
-          <img class="card-image" src="gallery/1.png">
+          <img class="card-image" src="gallery/viewcards/enrollment.jpg">
           <div class="card-name">
             <h4>Enrollment</h4>
           </div>
@@ -28,7 +28,7 @@
       </div>
       <div class="section">
         <a class="viewcard" href="p-clearance/page.html">
-          <img class="card-image" src="gallery/2.png">
+          <img class="card-image" src="gallery/viewcards/clearance.jpg">
           <div class="card-name">
             <h4>Clearance</h4>
           </div>
@@ -36,15 +36,15 @@
       </div>
       <div class="section">
         <a class="viewcard" href="p-exam-permit/page.html">
-          <img class="card-image" src="gallery/3.png">
+          <img class="card-image" src="gallery/viewcards/exampermit.jpg">
           <div class="card-name">
-            <h4>Examination Permit</h4>
+            <h4>Exam Permit</h4>
           </div>
         </a>
       </div>
       <div class="section">
         <a class="viewcard" href="p-transcript-of-records/page.html">
-          <img class="card-image" src="gallery/1.png">
+          <img class="card-image" src="gallery/viewcards/tor.jpg">
           <div class="card-name">
             <h4>Transcript of Records</h4>
           </div>
@@ -52,15 +52,15 @@
       </div>
       <div class="section">
         <a class="viewcard" href="p-renewal-id/page.html">
-          <img class="card-image" src="gallery/2.png">
+          <img class="card-image" src="gallery/viewcards/idrenewal.jpg">
           <div class="card-name">
-            <h4>ID Renewal</h4>
+            <h4>I.D. Renewal</h4>
           </div>
         </a>
       </div>
       <div class="section">
         <a class="viewcard" href="p-excuse-letter/page.html">
-          <img class="card-image" src="gallery/3.png">
+          <img class="card-image" src="gallery/viewcards/excuseletter.jpg">
           <div class="card-name">
             <h4>Excuse Letter</h4>
           </div>
