--- a/p-exam-permit/page.html
+++ b/p-exam-permit/page.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="../page.css">
     <link rel="stylesheet" href="../content.css">
     <script src="load.js"></script>
+    <style>
+      .process-header {
+        background-image: url(../gallery/480p/exampermit-480.jpg);
+      }
+      @media only screen and (min-width: 481px) and (max-width: 1024px){
+        .process-header {
+          background-image: url(../gallery/768p/exampermit-768.jpg);
+        }
+      }
+      @media only screen and (min-width: 1025px) {
+        .process-header {
+          background-image: url(../gallery/1152p/exampermit-1152.jpg);
+        }
+      }
+    </style>
   </head>
 
   <body>
