--- a/p-enrollment/page.html
+++ b/p-enrollment/page.html
@@ -8,10 +8,25 @@
     <link rel="stylesheet" href="../page.css">
     <link rel="stylesheet" href="../content.css">
     <script src="load.js"></script>
+    <style>
+      .process-header {
+        background-image: url(../gallery/480p/enrollment-480.jpg);
+      }
+      @media only screen and (min-width: 481px) and (max-width: 1024px){
+        .process-header {
+          background-image: url(../gallery/768p/enrollment-768.jpg);
+        }
+      }
+      @media only screen and (min-width: 1025px) {
+        .process-header {
+          background-image: url(../gallery/1152p/enrollment-1152.jpg);
+        }
+      }
+    </style>
   </head>
 
   <body>
-    <header class="process-header">
+    <header class="process-header" >
       <a class="back-home" href="../index.html"><img src="../ico/arrow-back.svg" alt="-"> <h3>Enrollment</h3> </a>
       <div class="process-title">
         <h1>ENROLLMENT</h1>
